# uquake

./: .gitignore  README.md  makefile  meson.build  meson_options.txt
builddir/: build.ninja  compile_commands.json
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  meson-info.json
builddir/meson-logs/: meson-log.txt
src/: anorm_dots.h  anorms.h  bspfile.h  cd_audio.c  cd_linux.c  cd_null.c  cdaudio.h  chase.c  cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c  client.h  cmd.c  cmd.h  common.c  common.h  console.c  console.h  crc.c  crc.h  cvar.c  cvar.h  d_edge.c  d_fill.c  d_iface.h  d_init.c  d_local.h  d_modech.c  d_part.c  d_polyse.c  d_scan.c  d_sky.c  d_sprite.c  d_surf.c  d_vars.c  d_zpoint.c  dosisms.h  draw.c  (+103 more)
src/draw/: adivtab.h  d_edge.c  d_fill.c  d_iface.h  d_init.c  d_local.h  d_modech.c  d_part.c  d_polyse.c  d_scan.c  d_sky.c  d_sprite.c  d_surf.c  d_vars.c  d_zpoint.c
src/net/: net.h  net_bsd.c  net_bw.h  net_dgrm.c  net_dgrm.h  net_ipx.c  net_ipx.h  net_loop.c  net_loop.h  net_main.c  net_none.c  net_ser.c  net_ser.h  net_udp.c  net_udp.h  net_vcr.c  net_vcr.h
src/r_fx/: r_bsp.c  r_draw.c  r_edge.c  r_light.c  r_local.h  r_main.c  r_misc.c  r_part.c  r_sky.c  r_sprite.c  r_surf.c
src/r_gl/: gl_draw.c  gl_mesh.c  gl_model.c  gl_model.h  gl_refrag.c  gl_rlight.c  gl_rmain.c  gl_rmisc.c  gl_rsurf.c  gl_screen.c  gl_test.c  gl_vidlinux.c  gl_vidlinuxglx.c  gl_warp.c  gl_warp_sin.h  glquake.h  glquake2.h
src/r_soft/: r_aclip.c  r_alias.c  r_bsp.c  r_draw.c  r_edge.c  r_efrag.c  r_light.c  r_local.h  r_main.c  r_misc.c  r_part.c  r_shared.h  r_sky.c  r_sprite.c  r_surf.c  r_vars.c
