project('uquake', 'c', default_options : ['buildtype=debugoptimized'])

x11 = dependency('x11')
xshm = dependency('xext')

cc = meson.get_compiler('c')
m_dep = cc.find_library('m', required : false)

uquake_sources = [  'src/cl_demo.c',
                    'src/cl_input.c',
                    'src/cl_main.c',
                    'src/cl_parse.c',
                    'src/cl_tent.c',
                    'src/chase.c',
                    'src/cmd.c',
                    'src/common.c',
                    'src/console.c',
                    'src/crc.c',
                    'src/cvar.c',
                    'src/draw.c',
                    'src/d_edge.c',
                    'src/d_fill.c',
                    'src/d_init.c',
                    'src/d_modech.c',
                    'src/d_part.c',
                    'src/d_polyse.c',
                    'src/d_scan.c',
                    'src/d_sky.c',
                    'src/d_sprite.c',
                    'src/d_surf.c',
                    'src/d_vars.c',
                    'src/d_zpoint.c',
                    'src/host.c',
                    'src/host_cmd.c',
                    'src/keys.c',
                    'src/menu.c',
                    'src/mathlib.c',
                    'src/model.c',
                    'src/net_dgrm.c',
                    'src/net_loop.c',
                    'src/net_main.c',
                    'src/net_vcr.c',
                    'src/net_udp.c',
                    'src/net_bsd.c',
                    'src/nonintel.c',
                    'src/pr_cmds.c',
                    'src/pr_edict.c',
                    'src/pr_exec.c',
                    'src/r_aclip.c',
                    'src/r_alias.c',
                    'src/r_bsp.c',
                    'src/r_light.c',
                    'src/r_draw.c',
                    'src/r_efrag.c',
                    'src/r_edge.c',
                    'src/r_misc.c',
                    'src/r_main.c',
                    'src/r_sky.c',
                    'src/r_sprite.c',
                    'src/r_surf.c',
                    'src/r_part.c',
                    'src/r_vars.c',
                    'src/screen.c',
                    'src/sbar.c',
                    'src/sv_main.c',
                    'src/sv_phys.c',
                    'src/sv_move.c',
                    'src/sv_user.c',
                    'src/zone.c',
                    'src/view.c',
                    'src/wad.c',
                    'src/world.c',
                    'src/cd_linux.c',
                    'src/sys_linux.c',
                    'src/vid_x.c',
                    'src/snd_null.c' ]

executable('uquake', uquake_sources, dependencies : [x11, xshm, m_dep], install : true)

